fix member story grid on IE

--- a/proto/css/src/_hack.ie.less
+++ b/proto/css/src/_hack.ie.less
@@ -27,13 +27,22 @@
   display: none; // remove tablist slider button on IE, which doesn’t support sliders
 }
 
-.o-Grid--represent,
-.o-Grid--members {
+.o-Grid--represent {
   .mx-clearfix();
   & > li.o-Grid__Item {
     @media (min-width: 30em) {
     float: left;
     width: 33.333333%;
+    }
+  }
+}
+
+.o-Grid--members {
+  .mx-clearfix();
+  & > li.o-Grid__Item {
+    @media (min-width: 60em) {
+      float: left;
+      width: 33.333333%;
     }
   }
 }
